# narrator

./: .dockerignore  .gitignore  GEMINI.md  compose  docker-compose.yml  pyproject.toml
.github/workflows/: api.docker-image.yml  docker-image.yml  keycloak-theme.yml  speech.docker-image.yml  web-app.docker-image.yml
api/: .env  Dockerfile  alembic.ini  api.http  build.sh  log_conf.yaml  pyproject.toml  readme.md
api/alembic/: env.py
api/alembic/versions/: 2025_11_16_1640-322cfef0a985_baseline.py  2025_11_16_2302-b33959ce8d24_add_books_table.py  2025_11_17_1723-d8df8166266c_add_sections_table.py  2025_11_18_1110-9630bff6869d_add_books_created_time_column.py  2025_11_19_1711-443cd901a111_add_books_status_and_books_number_of_.py  2025_11_21_1915-8652554c18cb_add_columns_to_sections_table_to_.py  2025_11_25_2113-b01376f0a3a0_extract_audio_info_into_a_separate_.py  2025_11_26_1301-fa2b80a18af4_add_playbackprogress_entity.py  2025_12_17_1457-114241e1a537_store_sync_current_section_and_playback_.py  2026_01_14_1344-51f3e125587f_store_bytes_in_audio_track.py  2026_01_16_0051-9f56bb851538_store_progress_data_in_jsonb_column.py  2026_02_23_1715-8310e1bf355a_add_settings_table.py  2026_03_10_1834-92b34bd1e6f1_add_books_shared_column.py  2026_03_12_1444-7dcf038fd7c4_add_playback_progress_user_id_column.py  2026_03_12_1652-9e2ca470a764_add_settings_user_id_column.py  2026_03_12_1742-8f8c92f43c30_add_index_for_search_by_title.py  2026_03_14_2201-53da1ebdb5e6_add_owner_id_to_books_table.py  2026_03_31_1845-15fe900e1c37_drop_books_shared.py  2026_04_14_1908-996218ac3cf4_add_books_cover.py  2026_04_22_2108-eef76c9a4e6d_add_books_metadata_candidates.py  2026_04_22_2138-062a6d61a136_make_books_title_nullable.py  2026_04_24_1536-47b73e59bdfa_add_metadata_columns_to_books_table.py  2026_05_04_1409-2d8dad9aae9e_drop_temp_files_table.py  2026_05_07_2345-840c4a009e2a_migrate_cover_urls_to_use_imgproxy.py  2026_05_11_1911-7ae176a85410_create_procurement_schema.py  2026_05_11_2317-19f924674ea3_add_procurement_epub_files.py  2026_05_12_0232-d22295a789e5_extend_procurement_epub_files_add_.py  2026_05_12_1849-d98f86021ade_add_procurement_metadata_id_type.py  2026_05_12_2206-47601eac6071_add_procurement_image_phashes.py  2026_05_12_2252-06c8a74303ba_add_procurement_epub_files_cover_matches.py  2026_05_13_0359-2535322d72f0_add_procurement_content_signatures.py  2026_05_14_1222-357447372841_add_metadata_editions_and_metadata_.py  2026_06_04_1913-d52b6e87ad5e_add_narration_queue_table_add_books_.py  2026_06_12_1456-794f259a88ed_drop_tracks_and_sections_tables.py
api/api/: __init__.py  api_models.py  audio.py  books.py  debug.py  experimental.py  files.py  main.py  maintenance.py  metadata.py  playlist.py  processing.py  sections.py  settings.py
api/api/metadata/: db.py  domain.py
api/api/models/: api.py  auth.py  db.py  domain.py  models.py  narration.py  rmq.py
api/api/openlibrary/: service.py
api/api/openlibrary/model/: __init__.py
api/api/procurement/: __init__.py  domain.py  models.py  rest.py  svc.py
api/api/services/: audiotracks.py  books.py  epub.py  experimental.py  files.py  kokoro.py  narration_queue.py  progress.py  rmq.py  sections.py  settings.py  speechgen.py
api/api/utils/: db.py  images.py  imgproxy.py  isbn.py  text.py  tts.py
api/scripts/: __init__.py  auth.py  backfill_metadata.py  client.py  delete_books.py  download_all_pdfs.py  generate_covers.py  parse_epub.py  upload_epub_files.py
api/tests/: conftest.py  test_cors.py
api/tests/models/: test_db.py  test_narration.py
api/tests/openlibrary/: test_service.py
api/tests/services/: test_books.py  test_epub.py  test_files.py  test_settings.py
api/tests/utils/: pdf.py  test_images.py  test_imgproxy.py  test_isbn.py  test_text.py  test_tts.py
api/tests/utils/test_data/: 3.html  encoded_entities.xhtml  fragment_injector.html  short_no_punct.html
common-lib/: pyproject.toml
common-lib/common_lib/: __init__.py  db.py  rmq.py  service.py  test.py  uvicorn.py
common-lib/common_lib/models/: rmq.py  tts.py
common-lib/tests/models/: test_rmq.py  test_tts.py
docs/: cluster-shutdown.md  high-level-architecture.excalidraw  procurement-schema.dbml
epub-lib/: pyproject.toml
epub-lib/epub_lib/: __init__.py  container.py  epub.py  main.py  package.py
epub-lib/epub_lib/model/: __init__.py  container.py  dcmi.py  nav.py  ncx.py  package.py  tts.py
epub-lib/epub_lib/util/: id.py  tts.py
epub-lib/tests/: test_container.py  test_epub.py  test_package.py
epub-lib/tests/model/: __init__.py  test_container.py  test_dcmi.py  test_nav.py  test_ncx.py  test_package.py  test_real_cases.py
epub-lib/tests/test_data/: Swing_Shift_3.epub
epub-lib/tests/util/: test_id.py  test_tts.py
keycloak-theme/email/: theme.properties
keycloak-theme/email/html/: email-verification.ftl  password-reset.ftl
keycloak-theme/email/messages/: messages_en.properties
keycloak-theme/email/text/: email-verification.ftl  password-reset.ftl
keycloak-theme/login/: login.ftl  template.ftl  theme.properties
keycloak-theme/login/resources/css/: styles.css
local-configs/: imgnginx.conf
scripts/: init-s3.py
speech-generator/: .dockerignore  .env  Dockerfile  README.md  log_conf.yaml  pyproject.toml
speech-generator/api/: __init__.py  app.py  kokoro.py  rmq.py  speechgen.py
speech-generator/api/models/: rmq.py
speech-generator/tests/: conftest.py  test_speechgen.py
web-app/: .dockerignore  .gitignore  Dockerfile  angular.json  build.sh  get-ssl.sh  nginx.conf  ngsw-config.json  package-lock.json  package.json  proxy.conf.json  version.js
web-app/public/: manifest.json  manifest.webmanifest
web-app/public/css/: epub-read-along.css
web-app/src/: index.html  main.ts  styles.scss
web-app/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
web-app/src/app/core/: auth.guard.ts  errorHandler.ts  fileAsBlobPipe.ts  hideIdleDirective.ts  httpInterceptors.ts  ownerDirective.ts  renderIfDirective.ts  resolvers.ts  utils.ts  visibilityDirective.ts
web-app/src/environments/: environment.prod.ts  environment.ts
(+87 files in other folders)
