[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ivan Babiankou <ivan.babiankou@gmail.com>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.126.0"
uvicorn = "^0.38.0"
python-multipart = "^0.0.21"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"
python-dotenv = "^1.2.1"
boto3 = "^1.42.14"
pypdf = "^6.4.2"
requests = "^2.32.5"
pyyaml = "^6.0.3"
pika = "^1.3.2"
narrator-commons = { path = "../common-lib", develop = true }
pymupdf = "^1.26.7"
m3u8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
fpdf = "^1.7.2"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
