[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ivan Babiankou <ivan.babiankou@gmail.com>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.126.0"
uvicorn = "^0.38.0"
python-multipart = "^0.0.21"
sqlalchemy = "^2.0.45"
psycopg2-binary = "^2.9.11"
alembic = "^1.17.2"
python-dotenv = "^1.2.1"
boto3 = "^1.42.14"
requests = "^2.32.5"
pyyaml = "^6.0.3"
pika = "^1.3.2"
narrator-commons = { path = "../common-lib", develop = true }
m3u8 = "^6.0.0"
fastapi-keycloak-middleware = "^1.6.0"
google-genai = "^1.73.1"
tenacity = "^9.1.4"
blake3 = "^1.0.8"
pillow = "^12.2.0"
narrator-epub = { path = "../epub-lib", develop = true }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
fpdf = "^1.7.2"
boto3-stubs = "~=1.42.14"
requests-oauthlib = "^2.0.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
log_cli = true
log_cli_level = "debug"
log_cli_format = "%(asctime)s [%(levelname)8s] (%(relative_path)40s:%(lineno)s) %(message)s "
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
