[project]
name = "narrator-commons"
version = "0.1.0"
description = "Internal shared utilities"
authors = [
    {name = "Ivan Babiankou",email = "ivan.babiankou@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]

[tool.poetry]
packages = [{include = "common_lib"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
