[project]
name = "narrator-commons"
version = "0.1.0"
description = "Internal shared utilities"
authors = [
    {name = "Ivan Babiankou",email = "ivan.babiankou@gmail.com"}
]

requires-python = ">=3.10"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi (>=0.126.0)",
    "tenacity (>=9.1.2,<10.0.0)",
]

[tool.poetry]
packages = [{include = "common_lib"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
