[project]
name = "speech-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Babiankou",email = "ivan.babiankou@gmail.com"}
]

requires-python = ">=3.10, <3.13"
dependencies = [
    "fastapi (>=0.126.0,<0.127.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "kokoro (>=0.9.4,<0.10.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pika (>=1.3.2,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "narrator-commons",
    "boto3 (>=1.42.14,<2.0.0)",
    "av (>=16.1.0,<17.0.0)",
    "torch"
]

[tool.poetry]
packages = [{include = "api"}]

[tool.poetry.dependencies]
narrator-commons = { path = "../common-lib", develop = true }
torch = { version="2.9.1", source = "pytorch-cpu"}

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
boto3-stubs = "^1.42.14"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
